tests/cases/device_definition_errors/diagnostics.kdl.txt
  error: Unexpected node
   ╭─[cases/device_definition_errors/input.kdl:1:1]
 1 │ a 1
   · ┬
   · ╰── The unexpected node
 2 │ 
   ╰────
  help: Expected a node with one of these names: `device`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:3:1]
 2 │ 
 3 │ device {
   · ───┬──
   ·    ╰── For this object
 4 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:7:1]
 6 │ 
 7 │ device 1 {
   · ───┬── ┬
   ·    │   ╰── Found this entry instead which is not a valid name
   ·    ╰── For this object
 8 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:11:1]
 10 │     
 11 │ ╭─▶ device FooD0 {
 12 │ │   
 13 │ ├─▶ }
    · ╰──── The empty node
 14 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:15:14]
 14 │ 
 15 │ device FooD1 abc def {
    ·              ─┬─ ─┬─
    ·               │   ╰── This entry is unexpected
    ·               ╰── This entry is unexpected
 16 │ 
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:15:1]
 14 │     
 15 │ ╭─▶ device FooD1 abc def {
 16 │ │   
 17 │ ├─▶ }
    · ╰──── The empty node
 18 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:20:5]
 19 │ device FooD2 {
 20 │     blah 123
    ·     ──┬─
    ·       ╰── The unexpected node
 21 │ }
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:25:5]
 23 │ device FooD3 {
 24 │     default-register-access RW
    ·     ─────────────┬────────────
    ·                  ╰── The original node
 25 │     default-register-access RO
    ·     ─────────────┬────────────
    ·                  ╰── The duplicate node
 26 │ }
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:29:29]
 28 │ device FooD4 {
 29 │     default-register-access Blah
    ·                             ──┬─
    ·                               ╰── Expected one of these values: `RW`, `RO`, `WO`
 30 │     default-buffer-access
    ╰────

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:30:5]
 29 │     default-register-access Blah
 30 │     default-buffer-access
    ·     ──────────┬──────────
    ·               ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 31 │     default-field-access RW RO WO
    ╰────
  help: Check the book for all the requirements

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:31:29]
 30 │     default-buffer-access
 31 │     default-field-access RW RO WO
    ·                             ─┬ ─┬
    ·                              │  ╰── This entry is unexpected
    ·                              ╰── This entry is unexpected
 32 │ }
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:35:29]
 34 │ device FooD5 {
 35 │     default-register-access value=RW
    ·                             ────┬───
    ·                                 ╰── This entry was expected to be anonymous
 36 │     register-address-type u8
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:35:5]
 34 │ device FooD5 {
 35 │     default-register-access value=RW
    ·     ───────────┬───────────
    ·                ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 36 │     register-address-type u8
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:37:26]
 36 │     register-address-type u8
 37 │     command-address-type 16
    ·                          ─┬
    ·                           ╰── Unexpected type: expected a string
 38 │     default-bit-order msb0
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:38:23]
 37 │     command-address-type 16
 38 │     default-bit-order msb0
    ·                       ──┬─
    ·                         ╰── Expected one of these values: `LSB0`, `MSB0`
 39 │     defmt-feature lol
    ╰────

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:48:5]
 47 │ 
 48 │     registah
    ·     ────┬───
    ·         ╰── The unexpected node
 49 │     register
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`

  error: Missing object name
    ╭─[cases/device_definition_errors/input.kdl:49:5]
 48 │     registah
 49 │     register
    ·     ────┬───
    ·         ╰── For this object
 50 │     register foor1 {
    ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `register Foo { }`

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:50:14]
 49 │     register
 50 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `address` node
 51 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:50:14]
 49 │     register
 50 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 51 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:54:9]
 53 │     register foor2 {
 54 │         address
    ·         ───┬───
    ·            ╰── This node should have one or more of these entries: `integer`
 55 │         address a
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:55:17]
 54 │         address
 55 │         address a
    ·                 ┬
    ·                 ╰── Unexpected type: expected a integer
 56 │         address 1
    ╰────

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:57:9]
 55 │         address a
 56 │         address 1
    ·         ───┬───
    ·            ╰── The original node
 57 │         address 2
    ·         ───┬───
    ·            ╰── The duplicate node
 58 │         repeat
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:58:9]
 57 │         address 2
 58 │         repeat
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 59 │         reset-value 0x2000_0000
    ╰────
  help: Check the book for all the requirements

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:53:14]
 52 │     }
 53 │     register foor2 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 54 │         address
    ╰────
  help: Check the book to see all required nodes

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:63:16]
 62 │         address -1
 63 │         repeat count=18_446_744_073_709_551_616 stride=1
    ·                ────────────────┬───────────────
    ·                                ╰── Value is out of the allowable range: 0..2^64
 64 │         allow-address-overlap #true
    ╰────
  help: The count is encoded as a u64

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:64:31]
 63 │         repeat count=18_446_744_073_709_551_616 stride=1
 64 │         allow-address-overlap #true
    ·                               ──┬──
    ·                                 ╰── This entry is unexpected
 65 │         reset-value 0x100 0x00
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:65:21]
 64 │         allow-address-overlap #true
 65 │         reset-value 0x100 0x00
    ·                     ──┬──
    ·                       ╰── Value is out of the allowable range: 0..256
 66 │     }
    ╰────
  help: When specifying the reset values as an array, all numbers must be bytes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:61:14]
 60 │     }
 61 │     register foor3 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 62 │         address -1
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:69:9]
 68 │         address 0
 69 │         fields {
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `size-bits`
 70 │ 
    ╰────
  help: Check the book for all the requirements

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:75:16]
 74 │         address 1
 75 │         fields size-bits=-1 {
    ·                ──────┬─────
    ·                      ╰── Value is out of the allowable range: 0..2^32
 76 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:81:55]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬────── ──────┬──────
    ·                                               │             ╰── The duplicate entry
    ·                                               ╰── The original entry
 82 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:81:83]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬────── ───────┬──────
    ·                                                                           │              ╰── The duplicate entry
    ·                                                                           ╰── The original entry
 82 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:81:116]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                                                  ────────┬──────── ────────────┬───────────
    ·                                                                                                          │                     ╰── The duplicate entry
    ·                                                                                                          ╰── The original entry
 82 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:81:16]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 82 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:81:40]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬──────
    ·                                               ╰── Expected one of these values: `LSB0`, `MSB0`
 82 │ 
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:81:69]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬──────
    ·                                                                           ╰── Expected one of these values: `LE`, `BE`
 82 │ 
    ╰────

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:87:16]
 86 │         address 3
 87 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 88 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:87:40]
 86 │         address 3
 87 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                        ──────┬─────
    ·                                              ╰── Unexpected type: expected a string
 88 │ 
    ╰────

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:87:53]
 86 │         address 3
 87 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                                     ───────┬───────
    ·                                                            ╰── Unexpected type: expected a string
 88 │ 
    ╰────

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:95:20]
 94 │         fields size-bits=8 {
 95 │             bar RW RO
    ·                 ─┬ ─┬
    ·                  │  ╰── The duplicate entry
    ·                  ╰── The original entry
 96 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:95:13]
 94 │         fields size-bits=8 {
 95 │             bar RW RO
    ·             ─┬─
    ·              ╰── This node should have one or more of these entries: `address ("@<u32>:<u32>")`
 96 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: Check the book for all the requirements

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:96:17]
 95 │             bar RW RO
 96 │             bar @a @-1:8 @3 @3:0
    ·                 ─┬
    ·                  ╰── Value could not be parsed correctly. Use the following format: `@<u32>`
 97 │             baz @7:4 blah
    ╰────
  help: An example: `@10`

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:96:20]
 95 │             bar RW RO
 96 │             bar @a @-1:8 @3 @3:0
    ·                    ──┬──
    ·                      ╰── Value could not be parsed correctly. Use the following format: `@<u32>:<u32>`
 97 │             baz @7:4 blah
    ╰────
  help: An example: `@7:0`

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:96:29]
 95 │             bar RW RO
 96 │             bar @a @-1:8 @3 @3:0
    ·                          ─┬ ──┬─
    ·                           │   ╰── The duplicate entry
    ·                           ╰── The original entry
 97 │             baz @7:4 blah
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:97:22]
 96 │             bar @a @-1:8 @3 @3:0
 97 │             baz @7:4 blah
    ·                      ──┬─
    ·                        ╰── Expected one of these values: `@<u32>`, `@<u32>:<u32>`, `RW`, `RO`, `WO`
 98 │         }
    ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:105:14]
 104 │             (uint)baz @2:1
 105 │             (i16a)quux @4:3
     ·              ──┬─
     ·                ╰── Expected one of these values: `bool`, `uint`, `int`, `u8`, `u16`, `u32`, `i8`, `i16`, `i32`, `i64`, `u64`, `<base>:<target>`, `<base>:<target>?`
 106 │             (:MyCustomType?)qus @6:5
     ╰────

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:118:13]
 117 │             }
 118 │             baz @3:2 {
     ·             ─┬─
     ·              ╰── Add conversion type specification to this field
 119 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:121:14]
 120 │             }
 121 │             (uint)bam @5:4 {
     ·              ──┬─ ─┬─
     ·                │   ╰── Add conversion type specification to this field
     ·                ╰── A type specifier already exists, but misses the conversion
 122 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:126:19]
 125 │                 A
 126 │                 B 1.0
     ·                   ─┬─
     ·                    ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 127 │                 C default-value
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:127:19]
 126 │                 B 1.0
 127 │                 C default-value
     ·                   ──────┬──────
     ·                         ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 128 │                 D #null 2
     ╰────

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:128:25]
 127 │                 C default-value
 128 │                 D #null 2
     ·                         ┬
     ·                         ╰── This entry is unexpected
 129 │             }
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:128:19]
 127 │                 C default-value
 128 │                 D #null 2
     ·                   ──┬──
     ·                     ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 129 │             }
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:132:5]
 131 │     }
 132 │     command {
     ·     ───┬───
     ·        ╰── For this object
 133 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `command Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:132:5]
 131 │     }
 132 │     command {
     ·     ───┬───
     ·        ╰── This command is missing the required `address` node
 133 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:135:13]
 134 │     }
 135 │     command fooc0 {
     ·             ──┬──
     ·               ╰── This command is missing the required `address` node
 136 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:140:9]
 139 │         address 0
 140 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 141 │         blah
     ╰────
  help: Check the book for all the requirements

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:141:9]
 140 │         repeat
 141 │         blah
     ·         ──┬─
     ·           ╰── The unexpected node
 142 │         in {
     ╰────
  help: Expected a node with one of these names: `allow-address-overlap`, `address`, `repeat`, `in`, `out`

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:142:9]
 141 │         blah
 142 │         in {
     ·         ─┬
     ·          ╰── This node should have one or more of these entries: `size-bits`
 143 │             
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:149:5]
 148 │     }
 149 │     buffer {
     ·     ───┬──
     ·        ╰── For this object
 150 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `buffer Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:149:5]
 148 │     }
 149 │     buffer {
     ·     ───┬──
     ·        ╰── This register is missing the required `address` node
 150 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:152:12]
 151 │     }
 152 │     buffer foob0 {
     ·            ──┬──
     ·              ╰── This register is missing the required `address` node
 153 │         
     ╰────
  help: Check the book to see all required nodes

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:157:9]
 156 │         address 0
 157 │         addressssss 500
     ·         ─────┬─────
     ·              ╰── The unexpected node
 158 │         address 1
     ╰────
  help: Expected a node with one of these names: `access`, `address`

  error: Duplicate node
     ╭─[cases/device_definition_errors/input.kdl:158:9]
 155 │     buffer foob1 {
 156 │         address 0
     ·         ───┬───
     ·            ╰── The original node
 157 │         addressssss 500
 158 │         address 1
     ·         ───┬───
     ·            ╰── The duplicate node
 159 │     }
     ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:162:16]
 161 │         address 2
 162 │         access BLAH
     ·                ──┬─
     ·                  ╰── Expected one of these values: `RW`, `RO`, `WO`
 163 │         access RO
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:165:5]
 164 │     }
 165 │     block
     ·     ──┬──
     ·       ╰── For this object
 166 │     /// This is a block
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `block Foo { }`

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:168:9]
 167 │     block b1 {
 168 │         foo
     ·         ─┬─
     ·          ╰── The unexpected node
 169 │         offset d
     ╰────
  help: Expected a node with one of these names: `offset`, `repeat`, `block`, `register`, `command`, `buffer`

  error: Unexpected type
     ╭─[cases/device_definition_errors/input.kdl:169:16]
 168 │         foo
 169 │         offset d
     ·                ┬
     ·                ╰── Unexpected type: expected a integer
 170 │         offset 5
     ╰────

  error: Duplicate node
     ╭─[cases/device_definition_errors/input.kdl:171:9]
 169 │         offset d
 170 │         offset 5
     ·         ───┬──
     ·            ╰── The original node
 171 │         offset 20
     ·         ───┬──
     ·            ╰── The duplicate node
 172 │     }
     ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:174:9]
 173 │     block b2 {
 174 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 175 │         repeat count=2 stride=4
     ╰────
  help: Check the book for all the requirements

